tests/fixtures/errors/reassign_borrowed.z
# E0200: a borrowed (param) reference cannot be reassigned.
thing: class { v: i64 }
f: function {x: thing} is {
    x = thing v: 5
}
main: function is {
    t: thing v: 1
    f x: t
}
